[gd_scene load_steps=3 format=3 uid="uid://det3po3wb3nm5"]

[ext_resource type="Script" path="res://Prog122a.gd" id="1_njejr"]
[ext_resource type="Theme" uid="uid://b1of66lsewm4f" path="res://big_text.tres" id="2_wc7hv"]

[node name="Prog122a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_njejr")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 512.0
theme = ExtResource("2_wc7hv")

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_top = 530.0
offset_right = 275.0
offset_bottom = 648.0
theme = ExtResource("2_wc7hv")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 414.0
offset_top = 528.0
offset_right = 689.0
offset_bottom = 646.0
theme = ExtResource("2_wc7hv")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 879.0
offset_top = 532.0
offset_right = 1154.0
offset_bottom = 650.0
theme = ExtResource("2_wc7hv")
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
